# instect-harness-oss

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md  clippy.toml  justfile  mise.toml  rustfmt.toml
.cargo/: config.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: build.yml  codegen-drift.yml  security-scan.yml
crates/insect-cli/: Cargo.toml
crates/insect-cli/src/: lib.rs  main.rs
crates/insect-core/: Cargo.toml
crates/insect-core/src/: lib.rs
crates/insect-eval/: Cargo.toml
crates/insect-eval/src/: lib.rs
crates/insect-proto/: Cargo.toml
crates/insect-proto/src/: lib.rs
crates/insect-providers/: Cargo.toml
crates/insect-providers/src/: lib.rs
crates/insect-runtime/: Cargo.toml
crates/insect-runtime/src/: lib.rs
crates/insect-sandbox/: Cargo.toml
crates/insect-sandbox/src/: lib.rs
crates/insectd/: Cargo.toml
crates/insectd/src/: lib.rs  main.rs
python/: pyproject.toml  ruff.toml
schemas/insect.eval.v1/: agent.json  budget.json  budget_ref.json  common.json  config.json  dataset.json  eval.json  finding.json  index.json  judge.json  provider_model_ref.json  run.json  sample.json  scorer.json  solver.json  trial.json
tools/: drift_check.sh
tools/codegen/: README.md  codegen.py  codegen_python.py  codegen_rust.py  codegen_typescript.py  requirements.txt
typescript/: biome.json  package.json  tsconfig.base.json  vitest.config.ts
