[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
edition = "2021"
version = "0.1.0-alpha.0"
authors = ["The Insect Authors"]
repository = "https://github.com/instect-dev/harness-oss"
rust-version = "1.84"

[workspace.dependencies]
tokio = { version = "1.42", features = ["full"] }
tonic = "0.12"
prost = "0.13"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "sqlite", "macros"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
futures = "0.3"
async-trait = "0.1"

[profile.release]
lto = "thin"
codegen-units = 1
debug = 1

[profile.dev]
opt-level = 0
debug = 2

[profile.ci]
inherits = "dev"
incremental = false
debug = 0
