[package]
name = "insect-cli"
description = "Insect harness command-line interface."
edition.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "insect"
path = "src/main.rs"

[dependencies]
insect-core = { path = "../insect-core" }
insect-proto = { path = "../insect-proto" }
