[package]
name = "insect-eval"
description = "Insect eval engine — Solver/Agent/Scorer/Judge primitives."
edition.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
insect-core = { path = "../insect-core" }
