[package]
name = "insect-providers"
description = "LLM provider abstraction for the Insect harness."
edition.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
insect-core = { path = "../insect-core" }
