[package]
name = "insect-runtime"
description = "Run orchestration for the Insect harness (WAL-journaled)."
edition.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
insect-core = { path = "../insect-core" }
insect-eval = { path = "../insect-eval" }
