[package]
name = "insect-sandbox"
description = "Sandbox abstraction for the Insect harness (backends pluggable)."
edition.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
insect-core = { path = "../insect-core" }
