[package]
name = "insectd"
description = "Insect harness daemon binary."
edition.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "insectd"
path = "src/main.rs"

[dependencies]
insect-core = { path = "../insect-core" }
insect-runtime = { path = "../insect-runtime" }
insect-proto = { path = "../insect-proto" }
